welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
		while (vuBiscuit=false) {
                                ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
		while (vuBiscuit=false) {
                ^