welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit: Boolean = false
def haveBaggle():Boolean = {
	if (vuBiscuit == true) {
		return true;
	} else {
		while (vuBiscuit=false) {
			for (i1 <- 1 to 6) {
				avance()
				if (estSurBiscuit) {
					vuBiscuit = true
					}
					}
					for (i2 <- 1 to 6) {
		recule()
	}
	droite()
	avance()
}
	}
}
